  "if (a.contains() == 2)" wouldn't compile anymore. Such code cannot exist
  in Qt4, so these methods return a bool now. If your code used the undocumented
  QBool, simply replace it with bool.

- qIsDetached<> has been removed without replacement.

- QMetaType:
  * QMetaType::construct() has been renamed to QMetaType::create().
  * QMetaType::unregisterType() has been removed.

- QMetaMethod:
  * QMetaMethod::signature() has been renamed to QMetaMethod::methodSignature(),
    and the return type has been changed to QByteArray. This was done to be able
    to generate the signature string on demand, rather than always storing it in
    the meta-data.
  * QMetaMethod::typeName() no longer returns an empty string when the return
    type is void; it returns "void". The recommended way of checking whether a
    method returns void is to compare the return value of QMetaMethod::returnType()
    to QMetaType::Void.

- QVariant:
  * Inconsistent constructor taking Qt::GlobalColor and producing QVariant(QColor)
    instance was removed. Code constructing such variants can be migrated by
    explicitly calling QColor constructor. For example from "QVariant(Qt::red)"
    to "QVariant(QColor(Qt::red))"

- QTestLib:
  * The plain-text, xml and lightxml test output formats have been changed to
    show a test result for every row of test data in data-driven tests.  In
    Qt4, only fails and skips were shown for individual data rows and passes
    were not shown for individual data rows, preventing accurate calculation
    of test run rates and pass rates.
  * The QTRY_VERIFY and QTRY_COMPARE macros have been moved into QTestLib.
    These macros formerly lived in tests/shared/util.h but are now provided
    by including the <QtTest/QtTest> header. In addition,
    QTRY_VERIFY_WITH_TIMEOUT and QTRY_COMPARE_WITH_TIMEOUT are provided,
    allowing for specifying custom timeout values.
  * The QTEST_NOOP_MAIN macro has been removed from the API.  If a test is